dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/gst_playd.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(gst_playd, 0.1.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB)

PKG_CHECK_MODULES(LIBZMQ, libzmq >= 3.2)
AC_SUBST(LIBZMQ)

PKG_CHECK_MODULES(GST, gstreamer-0.10)
AC_SUBST(GST)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
